syntax = "proto3";

package v2ray.core.common.net;
option csharp_namespace = "V2Ray.Core.Common.Net";
option go_package = "net";
option java_package = "com.v2ray.core.common.net";
option java_outer_classname = "PortProto";

// PortRange represents a range of ports.
message PortRange {
  uint32 From = 1;
  uint32 To = 2;
}
