syntax = "proto3";

package v2ray.core.tools.geoip;
option csharp_namespace = "V2Ray.Core.Tools.Geoip";
option go_package = "geoip";
option java_package = "com.v2ray.core.tools.geoip";
option java_outer_classname = "GeoipProto";

import "v2ray.com/core/app/router/config.proto";

message CountryIPRange {
  repeated v2ray.core.app.router.CIDR ips = 1;
}